@@ -1,9 +1,31 @@
 class reify(object):
+    """ Use as a class method decorator.  It operates almost exactly like the
+    Python ``@property`` decorator, but it puts the result of the method it
+    decorates into the instance dict after the first call, effectively
+    replacing the function it decorates with an instance variable.  It is, in
+    Python parlance, a non-data descriptor.  An example:
 
-    """ Put the result of a method which uses this (non-data)
-    descriptor decorator in the instance dict after the first call,
-    effectively replacing the decorator with an instance variable."""
+    .. code-block:: python
 
+       class Foo(object):
+           @reify
+           def jammy(self):
+               print 'jammy called'
+               return 1
+
+    And usage of Foo:
+
+    .. code-block:: text
+
+       >>> f = Foo()
+       >>> v = f.jammy
+       'jammy called'
+       >>> print v
+       1
+       >>> f.jammy
+       1
+       >>> # jammy func not called the second time; it replaced itself with 1
+    """
     def __init__(self, wrapped):
         self.wrapped = wrapped
         try:
